Add section 4: Debugging

--- a/notes/2. Debugging.md
+++ b/notes/2. Debugging.md
@@ -36,3 +36,39 @@ In order to avoid the need to restart the node server after every change manuall
 To install this npm package, run `npm install nodemon --save-dev`. It will download it and its own dependencies to the `node_modules` folder and add it to the `devDependencies` in `package.json`.
 
 To use nodemon, simply replace `node` in the startup command with `nodemon`. E.g. change the `start` script in `package.json` to `nodemon src/app.js`.
+
+## Debugging logical errors
+
+To find logical erros in the code, the Visual Studio Code debugger can be used. Start it via `Run` > `Start Debugging` (or just hit `F5`) and choose `Node.js` from the dropdown. Set some breakpoints and step through the code like with any other programming language in VS Code.
+
+The `Debug Console` tab (next to the integrated terminal) can be used to evaluate any variables or other statements during execution, even if it is paused on a breakpoint. Any changes made here are not reflected in the further execution of the program, but it can be handy to try some statements at a specific point in the code without continuously restarting it.
+
+To get an overview of all currently existing variables and their values, use the `Run and Debug` tab on the left in VS Code (`ctrl + shift + D`). The `variables` section shows all current variables. Any variables or statements can be added to the `watch` section if they are of particular interest. Below that, the current `call stack` is shown and can be inspected.
+
+In order for the debugger to restart automatically after any changes, go to `Run` > `Add Configuration...` in VS Code, select `Node.js` from the dropdown and edit the `.vscode/launch.json` file:
+
+```json
+{
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Program",
+            "skipFiles": ["<node_internals>/**"],
+            "program": "${workspaceFolder}/src/app.js",
+            "restart": true,
+            "runtimeExecutable": "nodemon",
+            "console": "integratedTerminal"
+        }
+    ]
+}
+```
+
+`"program": "${workspaceFolder}/src/app.js"` will make sure that not the currently opened file, but `app.js` will always be the entrypoint.
+
+By adding `"restart": true` and `"runtimeExecutable": "nodemon"`, the debugger will use nodemon instead of node and trigger it every time a change is made in any of the files.
+
+Nodemon will be run in a separate process that needs to be closed using `ctrl + C` after stopping the debugger. For that reason, it needs to be run in the integrated terminal.
+
+The `Debug Console` in VS Code can still be used interactively, but it does not show the logs anymore now that the process runs in the integrated terminal.
