Add the rest of section 5

--- a/notes/3. Express.md
+++ b/notes/3. Express.md
@@ -86,3 +86,115 @@ app.use("/", (req, res, next) => {
     res.send("<h1>Hello from Express!</h1>");
 });
 ```
+
+`use()` will register middleware functions that trigger on all HTTP verbs. To make sure a middleware will only trigger on a certain HTTP verb (`GET`, `POST`, `PUT`, etc.), use the specific function for that verb: `app.get()`, `app.post()`, etc. The signature of these functions is the same.
+
+## Parse incoming request data
+
+Parsing POST data is easier with Express than it is with vanilla Node.js.
+
+First install the `body-parser` package from npm:
+
+```bash
+npm install --save body-parser
+```
+
+Then import it, register its `urlencoded()` function as a middleware (before middleware functions that should be able to use it!) and simply fetch the `req.body`. It will hold a javascript object with the keys and values from the request.
+
+```javascript
+const bodyParser = require("body-parser");
+
+const app = express();
+
+app.use(bodyParser.urlencoded({ extended: false }));
+
+app.use("/add-product", (req, res, next) => {
+    res.send(
+        "<form action='/product' method='POST'><input type='text' name='title' /><button type='submit'>Add product</button></form>"
+    );
+});
+
+app.post("/product", (req, res, next) => {
+    console.log(req.body); // E.g. `{ title: 'Book' }`
+    res.redirect("/");
+});
+
+app.use("/", (req, res, next) => {
+    res.send("<h1>Hello from Express!</h1>");
+});
+```
+
+## Routers
+
+Express.js has a neat way to split the definition of middleware into multiple files. By creating a router for a group of middleware and importing it into the main `app.js` file, it can be used as a middleware itself there.
+
+```javascript
+// app.js
+
+const express = require("express");
+const bodyParser = require("body-parser");
+
+const adminRoutes = require("./routes/admin");
+const shopRoutes = require("./routes/shop");
+
+const app = express();
+
+app.use(bodyParser.urlencoded({ extended: false }));
+
+app.use(adminRoutes);
+app.use(shopRoutes);
+
+app.use((req, res, next) => {
+    res.status(404).send("<h1>Page not found</h1>");
+});
+
+app.listen(3000);
+```
+
+```javascript
+// routes/admin.js
+
+const express = require("express");
+
+const router = express.Router();
+
+router.get("/add-product", (req, res, next) => {
+    res.send(
+        "<form action='/add-product' method='POST'><input type='text' name='title' /><button type='submit'>Add product</button></form>"
+    );
+});
+
+router.post("/add-product", (req, res, next) => {
+    console.log(req.body);
+    res.redirect("/");
+});
+
+module.exports = router;
+```
+
+The `admin.js` file now exports an Express router that contains two routes. Importing and using this router in `app.js` now has the same result as defining the same two middleware functions right in the `app.js` file.
+
+An extra advantage of this approach, next to overview and separation of concerns, is that adding a prefix to all the routes in a groups is easy now:
+
+```javascript
+app.use("/admin", adminRoutes);
+app.use(shopRoutes);
+```
+
+All routes in the `admin.js` router are now only triggered if the path is prefixed with `/admin`: `/admin/add-product`.
+
+## Static file serving
+
+The file system of a project is not accessible via the browser by default. This is good, because users should not be able to view the code of the application. There are a few exceptions however, e.g. css stylesheets and images.
+
+To use static file serving, register the `express.static()` middleware:
+
+```javascript
+app.use(express.static(path.join(__dirname, "public")));
+```
+
+This will cause all URLs with a file extension to be forwarded to the `public` folder relative to the `app.js` file. This way, a stylesheet could be loaded:
+
+```html
+<link rel="stylesheet" href="/css/main.css" />
+```
